--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.7.4",
     "react-spinners": "^0.13.8",
     "redux-persist": "^6.0.0",
     "redux-persist-transform-filter": "^0.0.22",
